--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,9 @@
 %:
 	dh $@
 
+override_dh_auto_clean:
+	-dh_auto_clean
+
 override_dh_auto_configure:
 	dh_auto_configure -- --disable-static --disable-x11 --disable-v4l2_core --disable-v4lsink PLATFORM=MX8
 
