--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,7 @@
 #!/usr/bin/make -f
 
+CFLAGS += -I$(shell realpath extinc)
+
 %:
 	dh $@
 
@@ -7,6 +9,9 @@ override_dh_auto_clean:
 	-dh_auto_clean
 
 override_dh_auto_configure:
+	# HACK in ion.h
+	mkdir -p extinc/linux
+	find /usr/src/*/include/uapi -name ion.h -exec cp {} extinc/linux \;
 	dh_auto_configure -- --disable-static --disable-x11 --disable-v4l2_core --disable-v4lsink PLATFORM=MX8
 
 override_dh_install:
