Add section for source package
Change-Id: I5dd15e86a6752e7685b978ae80f527eef56a7188

--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,7 @@
 Source: imx-gst1.0-plugin
 Priority: optional
 Maintainer: AIY Projects <support-aiyprojects@google.com>
+Section: libs
 Build-Depends:
  debhelper (>=10),
  libdrm-dev (= 2.4.84+imx),
