Add armhf support to imx-gst1.0-plugin
Change-Id: I666bd477232f71168d9f21aa642142f2f5873cac

--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Standards-Version: 4.1.1
 
 Package: imx-gst1.0-plugin
 Section: libs
-Architecture: arm64
+Architecture: arm64 armhf
 Priority: optional
 Depends:
  ${shlibs:Depends},
