--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,8 @@ Build-Depends:
  imx-vpu-hantro-dev (=1.6.0),
  imx-vpuwrap-dev (= 4.3.4),
  libgstreamer1.0-dev (= 1.12.2+imx),
- libgstreamer-plugins-base1.0-dev (= 1.12.2+imx),
- libgstreamer-plugins-bad1.0-dev (= 1.12.2+imx),
+ libgstreamer-plugins-base1.0-dev (>= 1.12.2+imx),
+ libgstreamer-plugins-bad1.0-dev (>= 1.12.2+imx),
  linux-headers-4.9.51-aiy (>=1),
 Standards-Version: 4.1.1
 
@@ -22,7 +22,7 @@ Depends:
  ${misc:Depends},
  imx-vpu-hantro (=1.6.0),
  imx-vpuwrap (= 4.3.4),
- gstreamer1.0-plugins-base (= 1.12.2+imx),
+ gstreamer1.0-plugins-base (>= 1.12.2+imx),
  libgstreamer-plugins-base1.0-0 (= 1.12.2+imx),
- libgstreamer-plugins-bad1.0-0 (= 1.12.2+imx),
+ libgstreamer-plugins-bad1.0-0 (>= 1.12.2+imx),
 Description: IMX GStreamer plugin.
