--- a/debian/control
+++ b/debian/control
@@ -5,9 +5,9 @@ Section: libs
 Build-Depends:
  debhelper (>=10),
  libdrm-imx-dev (>= 2.4.84+imx),
- imx-vpu-hantro-dev (=1.6.0),
- imx-vpuwrap-dev (= 4.3.4),
- libgstreamer1.0-dev (= 1.12.2+imx),
+ imx-vpu-hantro-dev (>= 1.6.0),
+ imx-vpuwrap-dev (>= 4.3.4),
+ libgstreamer1.0-dev (>= 1.12.2+imx),
  libgstreamer-plugins-base1.0-dev (>= 1.12.2+imx),
  libgstreamer-plugins-bad1.0-dev (>= 1.12.2+imx),
  linux-headers-4.9.51-aiy (>=1),
@@ -20,9 +20,9 @@ Priority: optional
 Depends:
  ${shlibs:Depends},
  ${misc:Depends},
- imx-vpu-hantro (=1.6.0),
- imx-vpuwrap (= 4.3.4),
+ imx-vpu-hantro (>= 1.6.0),
+ imx-vpuwrap (>= 4.3.4),
  gstreamer1.0-plugins-base (>= 1.12.2+imx),
- libgstreamer-plugins-base1.0-0 (= 1.12.2+imx),
+ libgstreamer-plugins-base1.0-0 (>= 1.12.2+imx),
  libgstreamer-plugins-bad1.0-0 (>= 1.12.2+imx),
 Description: IMX GStreamer plugin.
