linux-imx: Make the local version use -imx instead of -aiy
Change-Id: I3e997ca25fd5c01aec10c1ff8fb5f060e59eb017

--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Build-Depends:
  libgstreamer1.0-dev (>= 1.12.2+imx),
  libgstreamer-plugins-base1.0-dev (>= 1.12.2+imx),
  libgstreamer-plugins-bad1.0-dev (>= 1.12.2+imx),
- linux-headers-4.9.51-aiy (>=1),
+ linux-headers-4.9.51-imx (>=1),
 Standards-Version: 4.1.1
 
 Package: imx-gst1.0-plugin
