--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: imx-gst1.0-plugin
 Priority: optional
-Maintainer: AIY Projects <support-aiyprojects@google.com>
+Maintainer: AIY Projects <coral-support@google.com>
 Section: libs
 Build-Depends:
  debhelper (>=10),
