Fix the support name
Change-Id: Ic5d321fae6a2a2ca424e9df0730ca01a3e736cdc

--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: imx-gst1.0-plugin
 Priority: optional
-Maintainer: AIY Projects <coral-support@google.com>
+Maintainer: Coral <coral-support@google.com>
 Section: libs
 Build-Depends:
  debhelper (>=10),
