--- a/debian/rules
+++ b/debian/rules
@@ -12,6 +12,8 @@ override_dh_auto_configure:
 	# HACK in ion.h
 	mkdir -p extinc/linux
 	find /usr/src/*/include/uapi -name ion.h -exec cp {} extinc/linux \;
+	find /usr/src/*/include/uapi -name dma-buf.h -exec cp {} extinc/linux \;
+	find /usr/src/*/include/generated/uapi/linux -name version.h -exec cp {} extinc/linux \;
 	dh_auto_configure -- --disable-static --disable-x11 --disable-v4l2_core --disable-v4lsink PLATFORM=MX8
 
 override_dh_install:
